--- a/src/station1.html
+++ b/src/station1.html
@@ -7,5 +7,8 @@
 <title>Station 1</title>
 </head>
 <body>
+    <img src="./assets/image/railway-thumbnail.png" alt="">
+    <p><span style="font-weight: bold;">TechTrainの使い方<br>TechBowl</span></p>
+    <p>Suguru Ohki<br>6,772回視聴・2021/04/22</p>
 </body>
 </html>
