--- a/src/station5.html
+++ b/src/station5.html
@@ -1,1 +1,23 @@
 <!doctype html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/station4.css" type="text/css">
+    <title>Station 4</title>
+  </head>
+  <body>
+    <header> </header>
+    <main>
+        <div class="card">
+            <img src="./assets/image/railway-thumbnail.png" class="card__img-top" alt="アイコン"/>
+            <p class="card__title">TechTrainの使い方<br>TechBowl</p>
+            <p class="card__description">
+              <span>Suguru Ohki<br>6,772回視聴・2021/04/22</span>
+            </p>
+          </div>
+    </main>
+    <footer> </footer>
+  </body>
+</html>
