--- a/src/station8.html
+++ b/src/station8.html
@@ -1,1 +1,38 @@
 <!doctype html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="C:\Users\taiga\TechTrain\html-stations\src\station6.html"/>
+    <meta property="og:image" content="C:\Users\taiga\TechTrain\html-stations\src\assets\image\railway-thumbnail.png"/>
+    <meta property="og:title" content="TechBowl演習"/>
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:creator" content="@nakayama"/>
+    <link rel="stylesheet" href="./assets/css/station8.css" type="text/css">
+    <title>Station 8</title>
+  </head>
+  <body>
+    <header> </header>
+    <main>
+        <div class="card-wrapper">
+            <div class="card">
+                <img src="./assets/image/railway-thumbnail.png" class="card__img-top" alt="アイコン"/>
+                <p class="card__title">TechTrainの使い方<br>TechBowl</p>
+                <p class="card__description">
+                  <span>Suguru Ohki<br>6,772回視聴・2021/04/22</span>
+                </p>
+            </div>
+            <div class="card">
+                <img src="./assets/image/railway-thumbnail.png" class="card__img-top" alt="アイコン"/>
+                <p class="card__title">TechTrainの使い方<br>TechBowl</p>
+                <p class="card__description">
+                  <span>Suguru Ohki<br>6,772回視聴・2021/04/22</span>
+                </p>
+            </div>
+        </div>
+    </main>
+    <footer> </footer>
+  </body>
+</html>
